ExcludePOSList を config.yml に移行する

--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,19 @@
+exclude-pos-list:
+  - ["副詞", "助詞類接続"]
+  - ["助詞"]
+  - ["助動詞"]
+  - ["記号"]
+  - ["連体詞"]
+  - ["副詞", "助詞類接続"]
+  - ["動詞", "非自立"]
+  - ["動詞", "接尾"]
+  - ["名詞", "代名詞"]
+  - ["名詞", "非自立"]
+  - ["名詞", "接尾"]
+  - ["名詞", "数"]
+  - ["名詞", "サ変接続"]
+  - ["フィラー"]
+
 stop-words:
   - "ある"
   - "ない"
