UserDict を config.yml に移行する

--- a/config.yml
+++ b/config.yml
@@ -31,3 +31,10 @@ stop-words:
   - "できる"
 
 threshold: 3
+
+user-dict:
+  - "日本経済新聞,日本 経済 新聞,ニホン ケイザイ シンブン,カスタム名詞"
+  - "関西国際空港,関西 国際 空港,カンサイ コクサイ クウコウ,カスタム名詞"
+  - "インターフェイス,インターフェイス,インターフェイス,カスタム名詞"
+  - "ユースケース,ユースケース,ユースケース,カスタム名詞"
+  - "ロードマップ,ロードマップ,ロードマップ,カスタム名詞"
